--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <input type="password" id="psw" name="psw" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required><br><br>
     <div id="link"><a href="assets/images/Dynamics_AX_2012_IOS_MSLT.pdf">Forget Password ?</a></div>
 <br>
-<br>
+<be>
 
-  
+  <input type="submit" id="submit">
 
 
 
